# msu_hbt

./: README.md
doc/: theory.tex
local_scott/software/: CMakeLists.txt
local_scott/software/main_programs/: hades_hbt_fromOSCAR.cc  hbt_CalcKernel.cc  hbt_CalcWF.cc  hbt_fromGauss.cc  hbt_fromOSCAR.cc  hbt_pdtune.cc  maria.cc
software/: CMakeLists.txt
software/include/msu_commonutils/: arrays.h  decay_nbody.h  gslmatrix.h  qualifier.h  sf.h
software/include/msu_coral/: kernel.h
software/include/msu_hbt/: acceptance.h  hbt.h
software/src/commonutils/Arrays/: arraycalc.cc  charray.cc  mclist.cc  mcprlist.cc  threed.cc  ylmarray.cc
software/src/commonutils/Decay_NBody/: decay_nbody.cc
software/src/commonutils/GSLMatrix/: gslmatrix.cc
software/src/commonutils/Misc/: misc.cc
software/src/commonutils/Qualifiers/: qualifier.cc
software/src/commonutils/SpecialFunctions/Bessel/: bess.cc
software/src/commonutils/SpecialFunctions/CartesianHarmonics/: chcalc.cc
software/src/commonutils/SpecialFunctions/CoulWave/: coulwave.cc
software/src/commonutils/SpecialFunctions/Ylm/: ylm.cc
software/src/coral/Kernel/: kernel.cc
software/src/coral/SourceCalc/: sourcecalc_OSCAR_multibin.cc  sourcecalc_blast.cc
software/src/coral/WaveFunctions/wf/: wf_pHe3_sqwell.cc  wf_pd_sqwell.cc  wf_pp_schrod.cc
software/src/coral/WaveFunctions/wfcommon/: wfcommon.cc  wfsquarewell.cc
software/src/hbt/: acceptance.cc  hbt.cc  hbt_CFs.cc  hbt_cell.cc  hbt_cell_list.cc  readOSCAR2003.cc  readOSCAR97.cc
templates/workspace_calcwf/parameters/: wfcalcpars.txt
templates/workspace_gauss/parameters/: gausspars.txt
templates/workspace_oscar/parameters/: oscarpars.txt
